# nuage2mesh

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
resources/shaders/: simple.frag  simple.vert
source/: main.cpp
source/core/: Engine.cpp  Engine.h
source/core/algorithms/: FastTriangulation.cpp  FastTriangulation.h  MarchingCubes.cpp  MarchingCubes.h  Poisson.cpp  Poisson.h
source/core/data/primitive/: Point.h
source/core/data/structure/: Kdtree.h
source/core/graphics/: Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  PointCloud.cpp  PointCloud.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h
source/core/io/: FileIO.cpp  FileIO.h  FileLoader.cpp  FileLoader.h  Window.cpp  Window.h
source/core/utils/: Timer.h
source/engine/: Engine.cpp  Engine.h
source/engine/graphics/: Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  Node.cpp  Node.h  Program.cpp  Program.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp
source/engine/io/: FileLoader.cpp  FileLoader.h  Window.cpp  Window.h
source/events/: Event.h  LoadFileEvent.h  MouseDragEvent.h  MouseScrollEvent.h
source/patterns/events/: ApplyMarchingCubesEvent.h  EstimateNormalsEvent.h  Event.h  ExportFileEvent.h  FastTriangulationEvent.h  LoadFileEvent.h  MarchingCubesEvent.h  MouseDragEvent.h  MouseScrollEvent.h  PoissonEvent.h  RemoveOutliersEvent.h  RenderModeEvent.h  ResetGeometryEvent.h  SceneStateEvent.h  TimerEndEvent.h
source/patterns/observer/: IObserver.h  ISubject.h
source/patterns/singleton/: EventDispatcher.h  Logger.h
src/: main.cpp
